<resources>
    <string name="app_name">四次元</string>
    <string name="home">首页</string>
    <string name="profile">个人资料</string>
    <string name="logout">注销</string>
    <string name="detail">正文</string>
    <string name="weibo">微博</string>
    <string name="oauthing">授权中</string>
    <string name="sina_server_error">检测到你跳转到错误页面，这是因为新浪微博第三方认证服务器出错，多次重复操作依然不行的话尝试换网络，四次元无能为力
    </string>
    <string name="token_expires_in_time">请注意，根据新浪微博的平台政策，刚添加的帐号会在 %s
        天后过期，到时需要重新登录，在授权过期之前重复登陆不会刷新剩余天数
    </string>
    <string name="your_token_is_expired">检测到你的授权信息已经过期了，请重新授权一次</string>
    <string name="logout_to_login_again">返回帐号管理页面，重新授权</string>
    <string name="dialog_title_error">出错啦</string>
    <string name="login_again">重新授权</string>
    <string name="have_account_whose_token_is_expired">有帐号已经过期，无法收取新消息</string>
    <string name="token_has_expired">已过期</string>
    <string name="account_token_has_expired">%s 的授权已经过期，请重新授权</string>
    <string name="dont_have_other_account">没有多余帐号可供切换</string>
    <string name="tip_dialog_title">提示</string>
    <string name="tip_dialog_content">
        1. 搜索、私信、个人资料编辑都没接口做\n
        2. 受新浪微博政策限制，帐号隔3个月就会过期，需要重新登录\n
        3. 登录是在新浪网站上进行的，登录不了找新浪\n
        4. Flyme 和 Miui 这2个系统的问题都不解决
        5. 没适配到平板，不推荐5寸+设备使用这个应用
        6. 觉得不爽就老老实实用官方客户端\n
    </string>
    <string name="title_changelog">更新日志</string>
    <string name="changelog_close">关闭</string>
    <string name="click_to_top_tip">点击空白区域直接返回顶部</string>
    <string name="weibo_emotions">微博表情</string>
    <string name="download_emotions">下载表情</string>
    <string name="background_downloading">后台下载中</string>
    <string name="empty">空</string>
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="sec">秒前</string>
    <string name="justnow">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy年 M月d日 HH:mm</string>
    <string name="close">关闭</string>
    <string name="big_pic">原图</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="copy_to_clipboard">复制</string>
    <string name="copy_successfully">复制完成</string>
    <string name="have_copied">已经复制 %s</string>
    <string name="open">打开</string>
    <string name="switch_to_another_theme">切换主题</string>
    <string name="copy">复制</string>
    <string name="timeout">网络有问题，连不上</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="unknown_sina_network_error">新浪微博某些网络节点又出故障，换个网络试试</string>
    <string name="sd_card_in_not_mounted">SD卡未挂载</string>
    <string name="something_error">发生故障</string>
    <string name="please_deleted_cache_dir">权限出错，无法读取存储空间，需要用户手动删除SD卡下的
        /Android/data/org.qii.weiciyuan 目录
    </string>
    <string name="refresh">刷新</string>
    <string name="refreshing">刷新中……</string>
    <string name="no_new_message">没有新消息</string>
    <string name="total">共计</string>
    <string name="new_messages_count">%s条新消息</string>
    <string name="new_messages">条新消息</string>
    <string name="old_messages">条旧消息</string>
    <string name="weibos">条微博</string>
    <string name="loading">载入中……</string>
    <string name="click_to_load_some_older_msg">点击载入中间数据</string>
    <string name="loading_middle_msg">载入中间数据……</string>
    <string name="click_to_load_older_message">网络有问题，点击重新载入</string>
    <string name="older_message_empty">没有更早的消息了</string>
    <string name="more">载入更多</string>
    <string name="browser_all_messages">浏览全部微博</string>
    <string name="message_list">消息列表</string>
    <string name="message_number">微博消息</string>
    <string name="following_list">关注列表</string>
    <string name="fan_list">粉丝列表</string>
    <string name="topic_number">话题数</string>
    <string name="topic_list">话题列表</string>
    <string name="weibo_number">微博数</string>
    <string name="follow_him">关注</string>
    <string name="manage_group">管理分组</string>
    <string name="unfollow_him">取消关注</string>
    <string name="follow_successfully">关注成功</string>
    <string name="unfollow_successfully">已经取消关注</string>
    <string name="modify_successfully">修改完成</string>
    <string name="remove_fan_successfully">Ta 已经不再关注你了</string>
    <string name="m">男</string>
    <string name="f">女</string>
    <string name="verified_user">认证账户</string>
    <string name="verified_reason">新浪认证</string>
    <string name="is_following_me">正在关注</string>
    <string name="mentions">提及</string>
    <string name="comments">评论</string>
    <string name="discover">探索</string>
    <string name="me">个人</string>
    <string name="repost">转发</string>
    <string name="mail">私信</string>
    <string name="info">资料</string>
    <string name="write_weibo">写微博</string>
    <string name="at_other">添加好友</string>
    <string name="only_at_char">"@</string>
    <string name="emoticon">表情</string>
    <string name="word_emoticon">颜文字</string>
    <string name="topic">话题</string>
    <string name="txt_to_pic">文字转图片</string>
    <string name="clear_content">清空内容</string>
    <string name="are_you_sure">确定吗？</string>
    <string name="ask_clear">清空内容？</string>
    <string name="short_content_middle">精简中间\@</string>
    <string name="short_content_right">精简右侧\@</string>
    <string name="clear">清空</string>
    <string name="add_gps">添加GPS</string>
    <string name="add_pic">添加照片</string>
    <string name="add_emoticon">添加表情</string>
    <string name="view_gps">查看</string>
    <string name="delete_gps">删除</string>
    <string name="comment_cant_be_empty">评论不能为空</string>
    <string name="send_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="cancel_send">取消上传</string>
    <string name="retry_send">重新发送</string>
    <string name="send_faile_click_to_open">发送失败，点击打开</string>
    <string name="send_failed_and_save_to_draft">发送失败，已保存到草稿箱</string>
    <string name="cancel_send_and_save_to_draft">取消上传，已保存到草稿箱</string>
    <string name="click_to_open_draft">点击打开草稿箱</string>
    <string name="click_to_open">点击打开</string>
    <string name="background_sending">发送中</string>
    <string name="wait_server_response">发送完，等结果</string>
    <string name="send_photo">发送照片</string>
    <string name="dont_have_account">没用可用的发微博帐号</string>
    <string name="content_cant_be_empty">内容不能为空</string>
    <string name="content_cant_be_empty_and_dont_have_account">内容不能为空，当前也没可用的发微博帐号</string>
    <string name="content_words_number_too_many">字数太多了</string>
    <string name="enable_comment_when_repost">评论给当前微博</string>
    <string name="enable_comment_to_ori_when_repost">评论给原微博</string>
    <string name="enable_comment_to_ori_when_comment">评论给原微博</string>
    <string name="enable_repost">转发到我的微博</string>
    <string name="comment_detail">评论</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="dont_have_camera_app">该设备没有拍照应用</string>
    <string name="select">选择</string>
    <string name="get_the_last_picture">刚拍的照片</string>
    <string name="dont_have_the_last_picture">没有找到拍过的照片</string>
    <string name="take_camera">拍照</string>
    <string name="select_pic">图库</string>
    <string name="send">发送</string>
    <string name="sending">发送中</string>
    <string name="photo">照片</string>
    <string name="say_something">说点什么吧……</string>
    <string name="left">剩余</string>
    <string name="share_pic">分享图片</string>
    <string name="save_to_draft">保存到草稿箱</string>
    <string name="do_you_want_to_save">要保存到草稿箱吗？</string>
    <string name="save">保存</string>
    <string name="convert_successfully">转换成功，你可以精简文字了</string>
    <string name="convert_failed">转换失败</string>
    <string name="failed_reason">发送失败：%s</string>
    <string name="share_failed_because_of_no_account">请先登陆再发微博哦</string>
    <string name="fetch_picture_from_other_apps">提取图片……</string>
    <string name="fetch_picture_from_other_apps_failed">提取图片失败</string>
    <string name="you_cancel_login">你取消了授权</string>
    <string name="login_success">授权成功</string>
    <string name="update_account_success">已有该帐号，授权信息更新成功</string>
    <string name="account_management">帐号管理</string>
    <string name="remove_successfully">删除成功</string>
    <string name="add_account">添加</string>
    <string name="oauth_login">网页授权</string>
    <string name="hack_login">黑魔法授权</string>
    <string name="official_app_login">官方客户端授权</string>
    <string name="login">授权</string>
    <string name="logining">授权中</string>
    <string name="email_cant_be_empty">登录邮箱不能为空</string>
    <string name="save_pic_album">保存到图片文件夹</string>
    <string name="force_download">重新下载</string>
    <string name="switch_to_ori_pic">原图</string>
    <string name="nearby">周边</string>
    <string name="remove_fan">移除粉丝</string>
    <string name="my_info">我的资料</string>
    <string name="at">"@TA"</string>
    <string name="search">搜索</string>
    <string name="dm">私信</string>
    <string name="favourite">收藏</string>
    <string name="un_favourite">取消收藏</string>
    <string name="account">帐号</string>
    <string name="delete">删除</string>
    <string name="reply_to_comment">回复评论</string>
    <string name="view">查看微博</string>
    <string name="modify_remark">修改备注</string>
    <string name="add_to_app_filter">过滤</string>
    <string name="open_with_other_app">用外部应用打开</string>
    <string name="copy_link_to_clipboard">复制链接</string>
    <string name="share_link">分享链接</string>
    <string name="setting">设置</string>
    <string name="pref_normal_title">常规</string>
    <string name="pref_sound_title">音效</string>
    <string name="pref_auto_refresh_title">首页自动刷新</string>
    <string name="pref_auto_refresh_summary">仅在 Wifi 网络下有效，新消息提示条会保持显示状态</string>
    <string name="pref_advanced_title">高级</string>
    <string name="pref_appearance_title">显示</string>
    <string name="notification">后台通知</string>
    <string name="draft">草稿箱</string>
    <string name="pref_read_style_title">新数据载入后</string>
    <string name="pref_data_control_title">流量控制</string>
    <string name="filter">首页过滤</string>
    <string name="pref_other_title">其他</string>
    <string name="pref_web_browser_title">浏览器</string>
    <string name="pref_enable_internal_web_browser">启用内置浏览器</string>
    <string name="pref_web_browser_summary">内置浏览器可以查阅分享该网页链接的微博</string>
    <string name="pref_gallery_title">图片</string>
    <string name="pref_enable_click_to_close_gallery">启用点击关闭图片</string>
    <string name="pref_cache_title">缓存</string>
    <string name="pref_click_to_clean_cache">点击清理缓存图片</string>
    <string name="getting_cache_size">缓存大小正在统计……</string>
    <string name="pref_black_magic_title">黑魔法</string>
    <string name="pref_filter_sina_ad">过滤新浪广告</string>
    <string name="pref_about_title">关于</string>
    <string name="pref_general_title">常规</string>
    <string name="pref_support_title">支持</string>
    <string name="pref_thanks_title">感谢</string>
    <string name="pref_storage_title">存储</string>
    <string name="pref_version_title">@string/title_changelog</string>
    <string name="pref_official_weibo_title">"@四次元App</string>
    <string name="pref_suggest_title">反馈意见</string>
    <string name="pref_recommend_title">推荐给微博好友</string>
    <string name="pref_donate_title">捐赠支持开发</string>
    <string name="pref_donate_summary">捐之前想清楚，下个版本不一定会支持你的设备</string>
    <string name="pref_play_store_address_title">Google Play</string>
    <string name="pref_play_store_address_summary">打分支持该应用</string>
    <string name="pref_github_title">Github</string>
    <string name="pref_author_title">开发者</string>
    <string name="pref_author_summary">心之所在</string>
    <string name="pref_icon_design_title">图标</string>
    <string name="pref_cache_path_title">缓存文件路径</string>
    <string name="pref_saved_pic_path_title">图片保存路径</string>
    <string name="pref_open_source_license_title">开源协议</string>
</resources>