<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_repost"
        android:icon="?repost"
        android:title="@string/repost"
        android:showAsAction="always"/>


    <item
        android:id="@+id/menu_comment"
        android:icon="?comment"
        android:title="@string/comments"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="?refresh"
        android:title="@string/refresh"/>


    <item
        android:id="@+id/menu_fav"
        android:title="@string/favourite"
        android:icon="?fav_un"/>

    <item
        android:id="@+id/menu_unfav"
        android:title="@string/un_favourite"
        android:icon="?fav_en"/>

    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="?share"
        android:actionProviderClass="android.widget.ShareActionProvider"/>


    <item
        android:id="@+id/menu_copy"
        android:title="@string/copy_to_clipboard"
        android:icon="?share"/>

    <item
        android:id="@+id/menu_delete"
        android:visible="false"
        android:title="@string/delete"/>

</menu>