<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory android:title="@string/pref_normal_title">

        <Preference android:title="@string/pref_appearance_title">
            <intent
                android:targetPackage="org.qii.weiciyuan"
                android:targetClass="org.qii.weiciyuan.ui.preference.AppearanceActivity"/>
        </Preference>

        <CheckBoxPreference
            android:key="sound"
            android:title="@string/pref_sound_title"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="auto_refresh"
            android:title="@string/pref_auto_refresh_title"
            android:summary="@string/pref_auto_refresh_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_advanced_title">

        <Preference android:title="@string/notification">
            <intent
                android:targetPackage="org.qii.weiciyuan"
                android:targetClass="org.qii.weiciyuan.ui.preference.NotificationActivity"/>
        </Preference>
        <Preference
            android:title="@string/draft"
            android:key="draft">
            <intent
                android:targetPackage="org.qii.weiciyuan"
                android:targetClass="org.qii.weiciyuan.ui.preference.DraftActivity"/>
        </Preference>
        <Preference
            android:title="@string/pref_data_control_title"
            android:key="data_control">
            <intent
                android:targetPackage="org.qii.weiciyuan"
                android:targetClass="org.qii.weiciyuan.ui.preference.ControlActivity"/>
        </Preference>


        <Preference
            android:title="@string/filter"
            android:key="filter">
            <intent
                android:targetPackage="org.qii.weiciyuan"
                android:targetClass="org.qii.weiciyuan.ui.preference.FilterActivity"
                />
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_other_title">
        <Preference android:title="@string/pref_about_title">
            <intent
                android:targetPackage="org.qii.weiciyuan"
                android:targetClass="org.qii.weiciyuan.ui.preference.AboutActivity"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>