<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_home"
        android:text="@string/home"
        android:drawableLeft="@drawable/ic_menu_home"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_mention"
        android:text="@string/mentions"
        android:drawableLeft="@drawable/repost_light"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_comment"
        android:text="@string/comments"
        android:drawableLeft="@drawable/comment_light"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_search"
        android:text="@string/search"
        android:drawableLeft="@drawable/ic_menu_search"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_dm"
        android:text="@string/dm"
        android:drawableLeft="@drawable/ic_menu_message"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_location"
        android:text="@string/nearby"
        android:drawableLeft="@drawable/ic_menu_location"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_profile"
        android:text="@string/profile"
        android:drawableLeft="@drawable/ic_menu_profile"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        android:drawableLeft="@drawable/ic_menu_logout"
        />


    <Button
        style="@style/drawerMenuButton"
        android:id="@+id/btn_setting"
        android:text="@string/setting"
        android:drawableLeft="@drawable/ic_menu_settings"
        />


</merge>
