<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_repost"
        android:icon="?repost"
        android:title="@string/repost"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_comment"
        android:icon="?comment"
        android:title="@string/comments"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_fav"
        android:icon="?fav_en"
        android:title="@string/favourite"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="?share"
        android:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    <item
        android:id="@+id/menu_copy"
        android:title="@string/copy_to_clipboard"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_remove"
        android:icon="?remove"
        android:title="@string/delete"
        android:showAsAction="ifRoom" />
</menu>