<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_enable_comment"
        android:title="@string/enable_comment_when_repost"
        android:checkable="true"
        android:checked="false"/>

    <item
        android:id="@+id/menu_enable_ori_comment"
        android:title="@string/enable_comment_to_ori_when_repost"
        android:checkable="true"
        android:checked="false"
        android:visible="false"/>


    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear_content"/>

    <item
        android:id="@+id/menu_short_middle"
        android:visible="false"
        android:title="@string/short_content_middle"/>

    <item
        android:id="@+id/menu_short_right"
        android:visible="false"
        android:title="@string/short_content_right"/>

</menu>