<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_view"
        android:title="@string/view"
        android:showAsAction="ifRoom|withText"
        android:visible="false"/>

    <item
        android:id="@+id/menu_comment"
        android:icon="?reply_to_comment"
        android:title="@string/reply_to_comment"
        android:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="?share"
        android:showAsAction="never"
        android:actionProviderClass="org.qii.weiciyuan.support.lib.ModifiedIconShareActionProvider"/>

    <item
        android:id="@+id/menu_copy"
        android:title="@string/copy_to_clipboard"
        android:icon="?copy"
        android:showAsAction="never"/>

    <item
        android:id="@+id/menu_remove"
        android:icon="?remove"
        android:title="@string/delete"
        android:showAsAction="ifRoom|withText"/>
</menu>