<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_comment"
          android:icon="?comment"
          android:title="@string/reply_to_comment"
          android:showAsAction="ifRoom|withText"
            />

    <item android:id="@+id/menu_share"
          android:title="@string/share"
          android:icon="?share"
          android:showAsAction="never"
          android:actionProviderClass="android.widget.ShareActionProvider"
            />

    <item android:id="@+id/menu_copy"
          android:title="@string/copy_to_clipboard"
          android:icon="?copy"
          android:showAsAction="never"
            />

    <item android:id="@+id/menu_remove"
          android:icon="?accountactivity_remove"
          android:title="@string/delete"
          android:showAsAction="ifRoom|withText"/>
</menu>