<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/menu_account"
          android:title="@string/account"
          android:icon="?account_management"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/menu_my_info"
          android:title="@string/my_info"
          android:showAsAction="ifRoom"
            />
    <!--<item android:id="@+id/menu_search"-->
    <!--android:title="@string/search"-->
    <!--android:actionViewClass="android.widget.SearchView"-->
    <!--android:icon="?search"-->
    <!--/>-->

    <item android:id="@+id/menu_setting"

          android:title="@string/setting"
          android:icon="?maintimelineactivity_settings"
          android:showAsAction="ifRoom"
            />


</menu>